--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Mykhaylo Brodskyy",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
     "validator": "^13.15.15"
